--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -26,7 +26,7 @@
                       Select Itinerary
                     </label>
                     <div class="col-sm-10">
-                    <%= select_tag(:itinerary_id, options_from_collection_for_select(Itinerary.all, :id, :itinerary_name, @itinerary_id), :class => "form-control") %>
+                    <%= select_tag(:itinerary_id, options_from_collection_for_select(Itinerary.all, :id, :itinerary_name, @day.itinerary_id), :class => "form-control") %>
                   </div>
                 </div>
 
