--- a/app/views/days/edit.html.erb
+++ b/app/views/days/edit.html.erb
@@ -31,10 +31,7 @@
             </label>
             <div class="col-sm-10">
               <div class="input-group date" id= "datetimepicker1">
-                    <input type="text" id="arrival_date" name="arrival_date" placeholder="Select Calendar for Date" class="form-control" value="<%= @day.arrival_date %>">
-                      <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                      </span>
+                <input type="text" id="arrival_date" name="arrival_date" placeholder="Select Calendar for Date" class="form-control" value="<%= (@day.arrival_date || Date.today).strftime("%m/%d/%Y") %>">
             </div>
           </div>
 
