--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -16,7 +16,7 @@
 <hr>
 
 <div class="row isotope-container">
-<% @locations.each do |location| %>
+<% @locations.order("location_name ASC").each do |location| %>
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 isotope-item">
     <div class="panel panel-success">
       <div class="panel-heading">
