--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h3>
     Add a New Day
-    <a href="/days/new" class="btn btn-lg btn-success"><i class="fa fa-plus"></i></a>
+    <a href="/days/new" class="btn btn-med btn-success"><i class="fa fa-plus"></i></a>
   </h3>
 </div>
 
@@ -16,7 +16,7 @@
 <hr>
 
 <div class="row isotope-container">
-<% @days.order("arrival_date ASC").each do |day| %>
+  <% @days.order("arrival_date ASC").each do |day| %>
   <div class="isotope-item">
     <div class="panel panel-success">
       <div class="panel-heading">
@@ -73,7 +73,7 @@
       </div>
     </div>
   </div>
-<% end %>
+  <% end %>
 </div>
 
 <!-- You can ignore the following. It's a quick and dirty example of how to get a Pinterest-style layout with quick search. -->
