--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h3>
     Add A New Itinerary
-    <a href="/itineraries/new" class="btn btn-sm btn-success"><i class="fa fa-plus"></i></a>
+    <a href="/itineraries/new" class="btn btn-med btn-success"><i class="fa fa-plus"></i></a>
   </h3>
 </div>
 
@@ -18,32 +18,32 @@
       </div>
       <div class="panel-body">
         <table>
-        <tr>
-          <th>Start date</th>
-          <th>Itinerary name</th>
-          <th>Action</th>
-        </tr>
-        <% @itineraries.order("start_date ASC").each do |itinerary| %>
-        <tr>
-          <td><%= itinerary.start_date %></td>
-          <td><%= itinerary.itinerary_name %></td>
-          <td>
-            <div class="btn-group">
-              <a href="/itineraries/<%= itinerary.id %>" class="btn btn-primary">
-                <i class="fa fa-search-plus"></i>
-              </a>
+          <tr>
+            <th>Start date</th>
+            <th>Itinerary name</th>
+            <th>Action</th>
+          </tr>
+          <% @itineraries.order("start_date ASC").each do |itinerary| %>
+          <tr>
+            <td><%= itinerary.start_date %></td>
+            <td><%= itinerary.itinerary_name %></td>
+            <td>
+              <div class="btn-group">
+                <a href="/itineraries/<%= itinerary.id %>" class="btn btn-primary">
+                  <i class="fa fa-search-plus"></i>
+                </a>
 
-              <a href="/itineraries/<%= itinerary.id %>/edit" class="btn btn-warning">
-                <i class="fa fa-edit"></i>
-              </a>
+                <a href="/itineraries/<%= itinerary.id %>/edit" class="btn btn-warning">
+                  <i class="fa fa-edit"></i>
+                </a>
 
-              <a href="/delete_itinerary/<%= itinerary.id %>" class="btn btn-danger" rel="nofollow">
-                <i class="fa fa-trash-o"></i>
-              </a>
-            </div>
-          </td>
-        </tr>
-        <% end %>
+                <a href="/delete_itinerary/<%= itinerary.id %>" class="btn btn-danger" rel="nofollow">
+                  <i class="fa fa-trash-o"></i>
+                </a>
+              </div>
+            </td>
+          </tr>
+          <% end %>
         </table>
 
       </div>
