--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h3>
     Add a New Location
-    <a href="/locations/new" class="btn btn-lg btn-success"><i class="fa fa-plus"></i></a>
+    <a href="/locations/new" class="btn btn-med btn-success"><i class="fa fa-plus"></i></a>
   </h3>
 </div>
 
@@ -16,7 +16,7 @@
 <hr>
 
 <div class="row isotope-container">
-<% @locations.order("location_name ASC").each do |location| %>
+  <% @locations.order("location_name ASC").each do |location| %>
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 isotope-item">
     <div class="panel panel-success">
       <div class="panel-heading">
@@ -50,7 +50,7 @@
       </div>
     </div>
   </div>
-<% end %>
+  <% end %>
 </div>
 
 <!-- You can ignore the following. It's a quick and dirty example of how to get a Pinterest-style layout with quick search. -->
