user specific updates

--- a/app/views/days/edit.html.erb
+++ b/app/views/days/edit.html.erb
@@ -32,6 +32,7 @@
           <div class="col-sm-10">
             <input type="text" id="arrival_date" name="arrival_date" placeholder="Select Calendar for Date" class="form-control" value="<%= (@day.arrival_date || Date.today).strftime("%m/%d/%Y") %>">
           </div>
+          </div>
 
           <!-- Label and input for origin_location_id -->
           <div class="form-group">
