--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -26,7 +26,7 @@
             Select Itinerary
           </label>
           <div class="col-sm-10">
-            <%= select_tag(:itinerary_id, options_from_collection_for_select(Itinerary.all, :id, :itinerary_name, @day.itinerary_id), :class => "form-control") %>
+            <%= select_tag(:itinerary_id, options_from_collection_for_select(current_user.itineraries, :id, :itinerary_name, @day.itinerary_id), :class => "form-control") %>
           </div>
         </div>
 
@@ -40,6 +40,7 @@
             <input type="text" id="arrival_date" name="arrival_date" placeholder="Select Calendar for Date" class="form-control" value="<%= (@day.arrival_date || Date.today).strftime("%m/%d/%Y") %>">
           </div>
         </div>
+
 
                 <!--
                 <div class="form-group">
